# drawing

./: .gitignore  CONTRIBUTING.md  INSTALL_FROM_SOURCE.md  README.md  class_diagram.dia  com.github.maoschanz.Draw.json  com.github.maoschanz.Drawing.json  com.github.maoschanz.drawing.json  de_DE.po  deb_package.sh  drawin.doap  drawing.doap  meson.build  meson_options.txt  tags.2lt6Ql  update-translations.sh
data/: com.github.maoschanz.Draw.appdata.xml.in  com.github.maoschanz.Draw.desktop.in  com.github.maoschanz.Draw.gschema.xml  com.github.maoschanz.Drawing.appdata.xml.in  com.github.maoschanz.Drawing.desktop.in  com.github.maoschanz.Drawing.gschema.xml  com.github.maoschanz.drawing.appdata.xml.in  com.github.maoschanz.drawing.desktop.in  com.github.maoschanz.drawing.gschema.xml  draw.gresource.xml  menus.ui  meson.build  window.ui
data/icons/: meson.build
help/: LINGUAS  meson.build
help/C/: canvas_tools.page  drawing.pot  drawing_tools.page  fullscreen.page  index.page  legal.xml  main_features.page  preferences.page  selection_canvas.page  selection_tools.page  tools_canvas.page  tools_classic.page  tools_classic_colors.page  tools_selection.page  tools_transform.page  whats_new.page  zoom_preview.page
help/es/: es.po
help/ru/: ru.po
help/tr/: fullscreen.page  index.page  legal.xml  main_features.page  preferences.page  tools_classic.page  tools_classic_colors.page  tools_selection.page  tools_transform.page  tr.po  whats_new.page  zoom_preview.page
src/: __init__.py  bottombar.py  color_popover.py  com.github.maoschanz.drawing.gresource.xml  com.github.maoschanz.drawing.in  crop_dialog.py  custom_image.py  deco_headerbar.py  deco_manager.py  deco_manager_headerbar.py  deco_manager_menubar.py  deco_manager_toolbar.py  deco_toolbar.py  decorations_manager.py  draw.gresource.xml  draw.in  drawing.gresource.xml  drawing.in  gi_composites.py  headerbar.py  history_manager.py  history_state.py  image.py  main.py  meson.build  message_dialog.py  minimap.py  modes.py  new_image_dialog.py  options_manager.py  pixbuf.py  pixbuf_manager.py  preferences.py  printing_manager.py  properties.py  rotate_dialog.py  saving_manager.py  scale_dialog.py  selection_manager.py  tools.py  (+3 more)
src/modes/: crop.py  draw.py  mode_crop.py  mode_draw.py  mode_rotate.py  mode_scale.py  rotate.py  scale.py
src/modes/ui/: crop.ui  draw.ui  mode_crop.ui  mode_rotate.ui  mode_scale.ui  rotate.ui  scale.ui
src/optionsbars/: abstract_optionsbar.py
src/optionsbars/canvas/: optionsbar-crop.ui  optionsbar-filters.ui  optionsbar-rotate.ui  optionsbar-scale.ui  optionsbar-skew.ui  optionsbar_crop.py  optionsbar_filters.py  optionsbar_rotate.py  optionsbar_scale.py  optionsbar_skew.py
src/optionsbars/classic/: optionsbar-classic.ui  optionsbar-color-popover.ui  optionsbar-operator-menus.ui  optionsbar_classic.py  optionsbar_color_popover.py
src/optionsbars/selection/: optionsbar-selection.ui  optionsbar_selection.py
src/optionsbars/transform/: abstract-optionsbar-transform.ui  optionsbar-crop.ui  optionsbar-filters.ui  optionsbar-rotate.ui  optionsbar-scale.ui  optionsbar-skew.ui  optionsbar_crop.py  optionsbar_filters.py  optionsbar_rotate.py  optionsbar_scale.py  optionsbar_skew.py
src/tools/: abstract_optionsbar.py  abstract_tool.py  crop.py  eraser.py  experiment.py  line.py  paint.py  pencil.py  picker.py  polygon.py  select.py  shape.py  text.py  tool_addalpha.py  tool_arc.py  tool_circle.py  tool_crop.py  tool_eraser.py  tool_experiment.py  tool_flip.py  tool_freeshape.py  tool_line.py  tool_paint.py  tool_pencil.py  tool_picker.py  tool_polygon.py  tool_rectangle.py  tool_replace.py  tool_rotate.py  tool_saturate.py  tool_scale.py  tool_select.py  tool_shape.py  tool_text.py  utilities_blur.py  utilities_overlay.py  utilities_paths.py  utilities_tools.py
src/tools/canvas_tools/: abstract_canvas_tool.py  tool_blur.py  tool_crop.py  tool_filters.py  tool_flip.py  tool_matrix.py  tool_rotate.py  tool_saturate.py  tool_scale.py  tool_skew.py
src/tools/classic_tools/: abstract_classic_tool.py  classic_panel.py  tool_addalpha.py  tool_arc.py  tool_brush.py  tool_censor.py  tool_circle.py  tool_eraser.py  tool_experiment.py  tool_freeshape.py  tool_highlight.py  tool_line.py  tool_paint.py  tool_pencil.py  tool_picker.py  tool_points.py  tool_polygon.py  tool_rectangle.py  tool_shape.py  tool_text.py
src/tools/classic_tools/brushes/: abstract_brush.py  brush_airbrush.py  brush_hairy.py  brush_nib.py  brush_nip.py  brush_simple.py
src/tools/classic_tools/erasers/: abstract_eraser.py  eraser_area.py  (+2 more)
src/tools/selection_tools/: abstract_select.py  color_select.py  free_select.py  rect_select.py  select_color.py  select_free.py  select_rect.py  selection_panel.py  tool_select.py
src/tools/transform_tools/: abstract_transform_tool.py  tool_crop.py  tool_filters.py  tool_rotate.py  tool_scale.py  tool_skew.py
src/tools/ui/: line.ui  pencil.ui  polygon.ui  select.ui  selection.ui  shape.ui  text.ui  tool-arc.ui  tool-brush.ui  tool-censor.ui  tool-circle.ui  tool-crop.ui  tool-eraser.ui  tool-experiment.ui  tool-filters.ui  tool-flip.ui  tool-highlight.ui  tool-line.ui  tool-paint.ui  tool-pencil.ui  tool-points.ui  tool-rotate.ui  tool-scale.ui  tool-select.ui  tool-shape.ui  tool-skew.ui  tool-text.ui  tool_arc.ui  tool_blur.ui  tool_crop.ui  tool_experiment.ui  tool_filters.ui  tool_flip.ui  tool_freeshape.ui  tool_line.ui  tool_matrix.ui  tool_paint.ui  tool_pencil.ui  tool_polygon.ui  tool_rectangle.ui  (+7 more)
src/ui/: app-menus.ui  color-popover.ui  color_popover.ui  crop_dialog.ui  custom-image.ui  headerbar-eos.ui  headerbar.ui  headerbar_eos.ui  image.ui  menus.ui  minimap.ui  new-image-dialog.ui  panel_classic.ui  preferences.ui  properties.ui  properties_dialog.ui  rotate_dialog.ui  scale_dialog.ui  selection-manager.ui  selection-menus.ui  selection-panel.ui  selection.ui  shortcuts.ui  toolbar-symbolic.ui  toolbar.ui  win-menus.ui  window.ui
src/utilities/: utilities_blur.py  utilities_colors.py  utilities_files.py  utilities_overlay.py  utilities_paths.py  utilities_units.py
(+82 files in other folders)
