
gnome.yelp(
	meson.project_name(),
	sources: [
		'index.page',
		'main_features.page',
		'preferences.page',
		'tools_classic.page',
		'tools_selection.page',
		'tools_transform.page',
		'legal.xml'
	],
	media: [
		'figures/icon.png',
		'figures/screenshot_arrow.png',
		'figures/screenshot_color_editor.png',
		'figures/screenshot_color_palette.png',
		'figures/screenshot_filters.png',
		'figures/screenshot_hsl.png',
		'figures/screenshot_menu.png',
		'figures/screenshot_prefs_images.png',
		'figures/screenshot_prefs_tools.png',
		'figures/screenshot_scale.png',
		'figures/screenshot_selection.png',
		'figures/screenshot_text.png',
		'figures/screenshot_zoom.png'
	]
)

